cabal-version: 3.0
name:          study
version:       0.1.0.0
build-type:    Simple

library
  -- cabal-fmt: expand .
  exposed-modules:
    StudyBytestringText
    VectorStudy

  build-depends:
    , array
    , base
    , bytestring
    , containers
    , mtl
    , vector

  hs-source-dirs:   .
  default-language: GHC2021
